first release final commit

--- a/Webiline_front/src/Components/Authentication/SignupPage.css
+++ b/Webiline_front/src/Components/Authentication/SignupPage.css
@@ -30,7 +30,7 @@
     padding: 10px 20px;
     margin-bottom: 20px;
     text-align: center;
-    background: #6457f9;
+    background: #00908e;
     color: #fff;
     font-size: 15px;
     font-family: inherit;
