--- a/Webiline_front/src/Components/SingleProduct/QuantityInput.css
+++ b/Webiline_front/src/Components/SingleProduct/QuantityInput.css
@@ -2,7 +2,7 @@
     width: 35px;
     height: 35px;
     font-size: 25px;
-    background-color: #ff8848;
+    background-color: #00908e;
     color: #fff;
     border: none;
     border-radius: 100%;
