--- a/Webiline_front/src/Components/Home/HeroSection.css
+++ b/Webiline_front/src/Components/Home/HeroSection.css
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 1fr;
     height: 550px;
     padding: 0 60px;
-    background-color: #000;
+    background-color: #00908e;
     color: #fff;
 }
 
