--- a/Webiline_front/src/Components/User/Users.css
+++ b/Webiline_front/src/Components/User/Users.css
@@ -29,7 +29,7 @@ table td {
 }
 
 table th {
-  background: #007bff;
+  background: #00908e;
   color: #fff;
   font-weight: bold;
 }
@@ -58,7 +58,7 @@ button:first-of-type {
 }
 
 button:last-of-type {
-  background: #dc3545;
+  background: #00908e;
   color: white;
 }
 
